Correção e add o bcryptjs, e README atualizado. Projeto finalizado!
