# api-pedidos/app.js
@@ -3,6 +3,7 @@ const express = require('express');
 const logger = require('morgan');
 const cors = require('cors');
 const connectDB = require('./v1/config/database');
+const usuariosRouter = require('./v1/routes/usuariosRouter');
 
 
 const swaggerUi = require('swagger-ui-express');
@@ -19,6 +20,8 @@ app.use(logger('dev'));
 app.use(express.json());
 app.use(express.urlencoded({ extended: false }));
 
+app.use('/api/v1/usuarios', usuariosRouter);
+
 const swaggerPath = path.join(__dirname, 'v1', 'docs', 'swagger.yaml');
 const swaggerFile = fs.readFileSync(swaggerPath, 'utf8');
 const swaggerDocument = yaml.parse(swaggerFile);
@@ -26,9 +29,8 @@ const swaggerDocument = yaml.parse(swaggerFile);
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
 const pedidosRouter = require('./v1/routes/pedidosRouter');
-const authRouter = require('./v1/routes/authRouter');
 
 app.use('/api/v1/pedidos', pedidosRouter);
-app.use('/api/v1/auth', authRouter);
+
 
 module.exports = app;
